Simple show/hide div with CSS

--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,13 @@ body {
     margin: 0%;
   }
 
+.hiddenHover{ 
+  display: none;
+}
+.hoverable:hover .hiddenHover{
+  display : block;
+}
+
 .nav-links a {
   color: #fff;
 }
