--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,11 @@ html {
   }
 
 body {
+  margin: 0px;
+}
+/*body {
     background: linear-gradient(180deg, rgba(62,25,88,1) 0%, rgba(0,0,0,1) 50%, rgba(62,25,88,1) 100%);
-  }
+  }*/
 
 /* UTILITIES */
 
@@ -22,6 +25,59 @@ body {
     list-style: none;
   }
   
+main {
+  height: 100vh;
+  overflow-x: hidden;
+  overflow-y: auto;
+  perspective: 2px;
+}
+
+section {
+  transform-style: preserve-3d;
+  position: relative;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+}
+
+.no-parallax {
+  background-color: rgba(62,25,88,1);
+  background-image: url(Images/mark-tegethoff-NbgQfUvKFE0-unsplash.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  z-index: 999;
+}
+
+section h1 {
+  text-align: center;
+  font-size: 4rem;
+  font-family: sans-serif;
+}
+
+.parallax h1 {
+  width: 60%;
+  font-size: 2rem;
+}
+
+.parallax::after {
+  content: ' ';
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  transform: translateZ(-1px) scale(1.5);
+  background-size: 100%;
+  z-index: -1;
+}
+
+.bg::after {
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url('https://picsum.photos/1080/720');
+  background-size: cover;
+}
 
 .placeholder {
   display: flex;
@@ -74,6 +130,7 @@ body {
   display: flex;
   gap: 1em;
   font-size: 18px;
+  z-index: 1;
 }
 
 .menu li:hover {
@@ -175,4 +232,6 @@ input[type=checkbox]:checked ~ .menu{
 }
   
 }
+
+
   
