--- a/styles.css
+++ b/styles.css
@@ -5,24 +5,18 @@ html {
 body {
   margin: 0px;
 }
-/*body {
-    background: linear-gradient(180deg, rgba(62,25,88,1) 0%, rgba(0,0,0,1) 50%, rgba(62,25,88,1) 100%);
-  }*/
-
-/* UTILITIES */
-
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
   }
 
-  a {
-    text-decoration: none;
+a {
+  text-decoration: none;
   }
-  
-  li {
-    list-style: none;
+
+li {
+  list-style: none;
   }
   
 main {
@@ -137,6 +131,7 @@ section h1 {
   background-color: rgba(62,25,88,1);
   border-radius: 5px;
   transition: 0.3s ease;
+  z-index: 1;
 }
 
 .menu li {
