--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,6 @@ li {
   }
   
 main {
-  height: 100vh;
   overflow-x: hidden;
   overflow-y: auto;
   perspective: 2px;
@@ -41,6 +40,7 @@ section {
   background-image: url(Images/mark-tegethoff-NbgQfUvKFE0-unsplash.jpg);
   background-repeat: no-repeat;
   background-size: cover;
+  background-attachment: fixed;
   z-index: 999;
 }
 
@@ -67,21 +67,9 @@ section h1 {
   z-index: -1;
 }
 
-.bg::after {
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url('https://picsum.photos/1080/720');
+.bg{
   background-size: cover;
-}
-
-.placeholder {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  flex-wrap: wrap;
-  font-size: 5rem;
-  color: #FFF;
-  justify-content: space-between;
-  margin: auto;
+  z-index: -1;
 }
 
 /* NAVBAR STYLING STARTS */
@@ -92,13 +80,14 @@ section h1 {
     justify-content: space-between;
     background-color: black;
     color: #fff;
-    padding:0%;
+    padding: 16px 0;
     margin: 0%;
   }
 
-.hiddenHover{ 
+.hiddenHover { 
   display: none;
 }
+
 .hoverable:hover .hiddenHover{
   display : block;
 }
@@ -118,10 +107,12 @@ section h1 {
   height: 100%;
   border-radius: 8px;
 }
+
 /* NAVBAR MENU */
 
-.menu {
-  display: flex;
+.menu { 
+  display:none;
+  text-align: center;
   gap: 1em;
   font-size: 18px;
   z-index: 1;
@@ -170,28 +161,26 @@ section h1 {
 .services:hover .dropdown {
   display: block;
 }
+
+.dropdown {
+  left: 50%;
+  top: 30px;
+  transform: translateX(35%);
+}
+
+.dropdown li:hover {
+  background-color: rgba(62,25,88,1);
+}
+
 /*RESPONSIVE NAVBAR MENU STARTS*/
 
 input[type=checkbox]{
   display: none;
 } 
-
-/*HAMBURGER MENU*/
-
-.hamburger {
-  display: none;
-  font-size: 24px;
-  user-select: none;
-}
-
-/* APPLYING MEDIA QUERIES */
-
-@media (max-width: 768px) {
-
 .menu { 
   display:none;
   position: absolute;
-  background-color:teal;
+  background-color:rgba(62,25,88,1);
   right: 0;
   left: 0;
   text-align: center;
@@ -200,7 +189,7 @@ input[type=checkbox]{
 
 .menu li:hover {
   display: inline-block;
-  background-color:#4c9e9e;
+  background-color:rgba(62,25,88,1);
   transition: 0.3s ease;
 }
 
@@ -217,16 +206,46 @@ input[type=checkbox]:checked ~ .menu{
 }
 
 .dropdown {
-  left: 50%;
+  left: -50%;
   top: 30px;
   transform: translateX(35%);
 }
 
 .dropdown li:hover {
-  background-color: #4c9e9e;
-}
-  
+  background-color: rgba(62,25,88,1);
 }
 
+/*HAMBURGER MENU*/
 
-  
+.hamburger {
+  display: block;
+  font-size: 24px;
+  user-select: none;
+}
+
+/* APPLYING MEDIA QUERIES */
+@media (min-width: 1200px){
+ 
+}
+
+/* Desktop media query */
+@media screen and (min-width: 768px) {
+
+.hamburger{
+  display: none;
+}
+
+.menu { 
+  display: flex;
+  position: relative;
+  background-color: black;
+}
+
+.navbar {
+  padding: 0;
+}
+
+.menu li + li {
+  margin-top: 0px;
+}
+}
